Adjust chart background and split its CSS file This also adjusts the height of the background (which the scrollbar will have to be fixed alongside narrow browsers, or mobile phones)

--- a/src/styles/pages/chart.scss
+++ b/src/styles/pages/chart.scss
@@ -9,7 +9,7 @@
         top: 0;
         left: 0;
         width: 100%;
-        height: 50vh;
+        height: 90vh;
         overflow: hidden;
         opacity: 0.1;
 
@@ -17,6 +17,7 @@
             width: 100%;
             height: 100%;
             object-fit: cover;
+            object-position: top;
         }
 
         &-overlay {
@@ -57,54 +58,6 @@
         
 
         &-details {
-            &--background {
-                position: relative;
-                width: 100%;
-                height: 168px;
-
-                &-info {
-                    display: flex;
-                    flex-direction: column;
-                    gap: 4px;
-                    padding: 24px 40px;
-                }
-
-                &-difficulties {
-                    padding: 0px 40px;
-                    position: absolute;
-                    bottom: 0;
-                }
-
-                &-difficulty {
-                    display: inline-flex;
-                    height: 24px;
-                    padding: 4px 8px 12px 8px;
-                    justify-content: center;
-                    align-items: center;
-                    flex-shrink: 0;
-                    border-style: none;
-                    border-radius: 5px;
-
-                    color: var(--hsl-c5, #161b1d);
-                    font-variant-numeric: lining-nums proportional-nums;
-                    font-family: var(--font-header);
-                    font-size: 12px;
-                    font-weight: 700;
-
-                    &-selected {
-                        margin: 0;
-                        border-radius: 5px 5px 0 0;
-                    }
-                }
-
-                &-bar {
-                    position: absolute;
-                    bottom: 0;
-                    width: var(--content-width);
-                    height: 2px;
-                }
-            }
-
             &--body {
                 padding: 20px 40px;
                 background-color: var(--hsl-c5);
@@ -155,37 +108,6 @@
                     border-radius: 2px;
                     background: var(--hsl-c4);
                     margin-right: 20px;
-                }
-            }
-
-            &--title {
-                color: var(--hsl-l1);
-                text-shadow: 0px 1px 3px rgba(0, 0, 0, 0.25);
-                font-family: var(--font-header);
-                font-size: 24px;
-                font-style: normal;
-                font-weight: 700;
-                line-height: normal;
-            }
-
-            &--artist {
-                color: var(--hsl-l2);
-                text-shadow: 0px 1px 3px rgba(0, 0, 0, 0.25);
-                font-family: var(--font-header);
-                font-size: 20px;
-                font-weight: 400;
-            }
-
-            &--creator {
-                color: var(--hsl-l3);
-                text-shadow: 0px 1px 3px rgba(0, 0, 0, 0.25);
-                font-family: var(--font-header);
-                font-size: 16px;
-                font-weight: 400;
-
-                a {
-                    color: var(--hsl-links);
-                    font-weight: 700;
                 }
             }
 
