--- a/src/styles/pages/user.scss
+++ b/src/styles/pages/user.scss
@@ -9,7 +9,7 @@
         top: 0;
         left: 0;
         width: 100%;
-        height: 50vh;
+        height: 90vh;
         overflow: hidden;
         opacity: 0.1;
 
@@ -17,6 +17,7 @@
             width: 100%;
             height: 100%;
             object-fit: cover;
+            object-position: top;
         }
 
         &-overlay {
